redundant variable update_container

--- a/project/books/templates/books/includes/books_form.html
+++ b/project/books/templates/books/includes/books_form.html
@@ -3,4 +3,4 @@
 
 {% translate "Book" context "book form title" as form_title %}
 
-{% generic_form title=form_title update_container='book_list' %}
+{% generic_form title=form_title %}
