--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -22,7 +22,7 @@
         {% url 'books:books_delete' object.id as url_delete %}
         {% ifchanged object.started|date:"Y" %}{% if not forloop.first %}<tr><td colspan="8" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
-        <tr data-url="{{ url_update }}?tab={{ tab }}" class="dblclick{% if not object.ended %} teal{% endif %}">
+        <tr hx-get="{{ url_update }}{% if tab %}?tab={{ tab }}{% endif %}" hx-trigger="dblclick" hx-target="#dialog" class="{% if not object.ended %} teal{% endif %}">
             <td class="text-start">{{ forloop.revcounter }}</td>
             <td class="text-start">{{ object.author }}</td>
             <td class="text-start">„{{ object.title }}”</td>
