edit_cell and delete_cell components with htmx

--- a/project/core/templates/core/includes/cell_delete.html
+++ b/project/core/templates/core/includes/cell_delete.html
@@ -2,6 +2,6 @@
 
 <td class="w-delete">
     {% if url %}
-    <a role="button" data-url="{{ url }}" {% if target %}data-target="{{ target }}"{% endif %} class="js-delete {% if target %}set-target {% endif %}trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
+    <a role="button" hx-get="{{ url }}" hx-target="#dialog" {% if target %}data-target="{{ target }}"{% endif %} class="js-delete {% if target %}set-target {% endif %}trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
     {% endif %}
 </td>
