--- a/project/core/templates/core/includes/cell_edit.html
+++ b/project/core/templates/core/includes/cell_edit.html
@@ -2,6 +2,6 @@
 
 <td class="w-edit">
     {% if url %}
-    <a role="button" data-url="{{ url }}" {% if target %}data-target="{{ target }}"{% endif %} class="js-create {% if target %}set-target {% endif %}edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
+    <a role="button" hx-get="{{ url }}" hx-target="#dialog" {% if target %}data-target="{{ target }}"{% endif %} class="{% if target %}set-target {% endif %}edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
     {% endif %}
 </td>
