changes in htmx script

--- a/project/core/templates/core/includes/generic_delete_form.html
+++ b/project/core/templates/core/includes/generic_delete_form.html
@@ -13,7 +13,7 @@
             </p>
         </div>
         <div class="modal-footer">
-            <button type="submit" onclick="save_and_close()" class="btn btn-sm btn-danger">{% translate 'Delete' %}</button>
+            <button type="submit" id="_close" class="btn btn-sm btn-danger">{% translate 'Delete' %}</button>
             <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">{% translate 'Close' %}</button>
         </div>
     </form>
