--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -20,7 +20,7 @@
     <div class="col-3 text-start" id="search_form_data">{{ search }}</div>
 
     <div class="col text-center" id="info_row">
-        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
+        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
     </div>
 
     <div class="col-3 text-end">
@@ -32,13 +32,13 @@
 
 <div class="row">
     <div id="book_list" class="col-lg-12">
-        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
+        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
     </div>
 </div>
 
 <div class="row my-2">
     <div class="col-lg-12" id="chart_readed_books">
-        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
+        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
     </div>
 </div>
 
