--- a/project/books/templates/books/includes/books_target_form.html
+++ b/project/books/templates/books/includes/books_target_form.html
@@ -1,2 +1,2 @@
 {% load form %}{% load i18n %}
-{% generic_form title='Tikslas metams' update_container='books-target-content' %}
+{% generic_form title='Tikslas metams' %}
