--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -20,13 +20,13 @@
     <div class="col-3 text-start" id="search_form_data">{{ search }}</div>
 
     <div class="col text-center" id="info_row">
-        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
+        <div hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
     </div>
 
     <div class="col-3 text-end">
-        {% url 'books:books_target_new' as url_books_target %}
+
         <button type="button" class="btn btn-sm btn-outline-success" hx-get="{% url 'books:books_new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{% translate 'Book' context 'book add button' %}</button>
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_books_target }}"><i class="bi bi-plus"></i>{{ year|title }} {% translate 'year goal' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" hx-get="{% url 'books:books_target_new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{{ year|title }} {% translate 'year goal' %}</button>
     </div>
 </div>
 
@@ -38,7 +38,7 @@
 
 <div class="row my-2">
     <div class="col-lg-12" id="chart_readed_books">
-        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
+        <div hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
     </div>
 </div>
 
