--- a/project/core/templates/core/includes/modal_form_js.html
+++ b/project/core/templates/core/includes/modal_form_js.html
@@ -1,7 +1,7 @@
 <script>
     $(document).keydown(function (event) {
         if (event.keyCode == 27) {
-            $('#modal-form').modal("hide");
+            $('#modal').modal("hide");
         }
     });
 
