--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -24,22 +24,17 @@
     </div>
 
     <div class="col-3 text-end">
-
         <button type="button" class="btn btn-sm btn-outline-success" hx-get="{% url 'books:books_new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{% translate 'Book' context 'book add button' %}</button>
         <button type="button" class="btn btn-sm btn-outline-success js-create" hx-get="{% url 'books:books_target_new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{{ year|title }} {% translate 'year goal' %}</button>
     </div>
 </div>
 
 <div class="row">
-    <div id="book_list" class="col-lg-12">
-        <div hx-trigger="load, reload from:body" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
-    </div>
+    <div id="book_list" class="col-lg-12" hx-trigger="load, reload from:body" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
 </div>
 
 <div class="row my-2">
-    <div class="col-lg-12" id="chart_readed_books">
-        <div hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
-    </div>
+    <div class="col-lg-12" id="chart_readed_books" hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
 </div>
 
 {% endblock content %}
