no need for update_container in paging template

--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -36,7 +36,7 @@
     </tbody>
 </table>
 
-{% paging url=url page_obj=object_list page_range=page_range search=search container=update_container %}
+{% paging url=url page_obj=object_list page_range=page_range search=search %}
 
 {% else %}
 
