--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -51,7 +51,7 @@
 
 <script>$('.sticky-table').stickyTableHeaders();</script>
 
-{% paging url=url page_obj=items page_range=page_range search=search container=update_container %}
+{% paging url=url page_obj=items page_range=page_range search=search %}
 
 {% else %}
 
