--- a/project/incomes/templates/incomes/includes/incomes_list.html
+++ b/project/incomes/templates/incomes/includes/incomes_list.html
@@ -34,7 +34,7 @@
     </tbody>
 </table>
 
-{% paging url=url page_obj=items page_range=page_range search=search container=update_container %}
+{% paging url=url page_obj=items page_range=page_range search=search %}
 
 {% else %}
 
