--- a/project/core/templates/core/includes/search_form.html
+++ b/project/core/templates/core/includes/search_form.html
@@ -1,6 +1,11 @@
 {% load i18n %}
 
-<form novalidate method="post" id="search_form" class="gx-1" hx-get="{{ url }}" hx-target="{{ target }}" hx-swap="innerHTML">
-    <input type="search" name="search" class="textinput textInput form-control form-control-sm"
+<form novalidate method="post" id="search_form" class="row d-flex gx-1 align-items-center" hx-get="{{ url }}" hx-target="{{ target }}" hx-swap="innerHTML">
+    <div class="col align-self-start">
+        <input type="search" name="search" id="id_search" class="textinput textInput form-control form-control-sm"
         placeholder="{% translate 'Search' %}..." aria-label="{% translate 'Search' %}">
+    </div>
+    <div class="col-auto align-self-start">
+        <button type="button" class="btn btn-sm btn-secondary" hx-get="{% url 'books:books_list' %}" hx-target="{{ target }}" onclick="$('#id_search').val('');">{% translate 'Reset' %}</button>
+    </div>
 </form>
