--- a/project/debts/templates/debts/includes/debts_delete_form.html
+++ b/project/debts/templates/debts/includes/debts_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete') update_container=request.resolver_match.kwargs.debt_type %}
+{% generic_delete_form title=_('Delete') %}
