--- a/project/debts/templates/debts/includes/debts_form.html
+++ b/project/debts/templates/debts/includes/debts_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Debt') update_container=request.resolver_match.kwargs.debt_type %}
+{% generic_form title=_('Debt') %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
