--- a/project/drinks/templates/drinks/includes/drinks_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_form.html
@@ -1,7 +1,7 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Drinks') update_container='ajax-content' %}
+{% generic_form title=_('Drinks') %}
 
 <script>
     $(document).ready(function () {
