--- a/project/pensions/templates/pensions/includes/pensions_form.html
+++ b/project/pensions/templates/pensions/includes/pensions_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Pension') update_container='pension-content' %}
+{% generic_form title=_('Pension') %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
