--- a/project/plans/templates/plans/includes/days_plan_form.html
+++ b/project/plans/templates/plans/includes/days_plan_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Day plans') update_container='day_list' chained_dropdown='plans_stats' %}
+{% generic_form title=_('Day plans') chained_dropdown='plans_stats' %}
