--- a/project/plans/templates/plans/includes/necessarys_plan_delete_form.html
+++ b/project/plans/templates/plans/includes/necessarys_plan_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete plans') update_container='necessary_list' %}
+{% generic_delete_form title=_('Delete plans') %}
