--- a/project/savings/templates/savings/includes/savings_delete_form.html
+++ b/project/savings/templates/savings/includes/savings_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete savings') update_container='ajax-content' %}
+{% generic_delete_form title=_('Delete savings') %}
