--- a/project/savings/templates/savings/includes/savings_form.html
+++ b/project/savings/templates/savings/includes/savings_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Savings') update_container='ajax-content' %}
+{% generic_form title=_('Savings') %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
