--- a/project/transactions/templates/transactions/includes/savings_close_form.html
+++ b/project/transactions/templates/transactions/includes/savings_close_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Fund &rArr; Account') update_container='savings_close_list' %}
+{% generic_form title=_('Fund &rArr; Account') %}
