--- a/project/users/templates/users/includes/users_delete.html
+++ b/project/users/templates/users/includes/users_delete.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete user') update_container='user_list' %}
+{% generic_delete_form title=_('Delete user') %}
