--- a/project/accounts/templates/accounts/includes/accounts_form.html
+++ b/project/accounts/templates/accounts/includes/accounts_form.html
@@ -1,3 +1,3 @@
 {% load form %}
 {% load i18n %}
-{% generic_form title=_('Account') update_container='ajax-content-categories' %}
+{% generic_form title=_('Account') %}
