--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_form.html
@@ -1,4 +1,4 @@
 {% load formset %}
 {% load i18n %}
 
-{% generic_formset title=_('Worth of savings') update_container='savings_worth' %}
+{% generic_formset title=_('Worth of savings') %}
