--- a/project/counts/templates/counts/includes/counts_type_form.html
+++ b/project/counts/templates/counts/includes/counts_type_form.html
@@ -1,3 +1,3 @@
 {% load form %}
 {% load i18n %}
-{% generic_form title=_('Count type') update_container='None' %}
+{% generic_form title=_('Count type') %}
