--- a/project/debts/templates/debts/includes/debts_return_delete_form.html
+++ b/project/debts/templates/debts/includes/debts_return_delete_form.html
@@ -1,7 +1,4 @@
 {% load form %}
 {% load i18n %}
-{% load slippers %}
 
-{% var target=request.resolver_match.kwargs.debt_type|add:'_return' %}
-
-{% generic_delete_form title=_('Delete') update_container=target %}
+{% generic_delete_form title=_('Delete') %}
