--- a/project/expenses/templates/expenses/includes/expenses_delete_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_delete_form.html
@@ -1,2 +1,2 @@
 {% load form %}{% load i18n %}
-{% generic_delete_form title=_('Delete expenses') update_container='expenses_list' %}
+{% generic_delete_form title=_('Delete expenses') %}
