--- a/project/expenses/templates/expenses/includes/expenses_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_form.html
@@ -4,7 +4,7 @@
 {% url 'expenses:load_expense_name' as chained_url %}
 {% translate "Expenses" context "expenses form title" as form_title %}
 
-{% generic_form title=form_title update_container='expenses_list' chained_dropdown=chained_url %}
+{% generic_form title=form_title chained_dropdown=chained_url %}
 
 <script>
     // on escape key hide modal form
