--- a/project/expenses/templates/expenses/includes/expenses_name_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_name_form.html
@@ -1,2 +1,2 @@
 {% load form %}{% load i18n %}
-{% generic_form title=_('Expense name') update_container='ajax-content-categories' %}
+{% generic_form title=_('Expense name') %}
