--- a/project/expenses/templates/expenses/includes/expenses_type_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_type_form.html
@@ -1,5 +1,5 @@
 {% load form %}{% load i18n %}
-{% generic_form title=_('Expense type') update_container='ajax-content-categories' %}
+{% generic_form title=_('Expense type') %}
 
 <style>
     .form-check {
