--- a/project/incomes/templates/incomes/includes/incomes_form.html
+++ b/project/incomes/templates/incomes/includes/incomes_form.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% load i18n %}
 
-{% generic_form title=_('Incomes') update_container='ajax-content' %}
+{% generic_form title=_('Incomes') %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
