--- a/project/incomes/templates/incomes/includes/incomes_type_form.html
+++ b/project/incomes/templates/incomes/includes/incomes_type_form.html
@@ -1,3 +1,3 @@
 {% load form %}
 {% load i18n %}
-{% generic_form title=_('Incomes type') update_container='ajax-content-categories' %}
+{% generic_form title=_('Incomes type') %}
