--- a/project/plans/templates/plans/includes/necessarys_plan_form.html
+++ b/project/plans/templates/plans/includes/necessarys_plan_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Additional necessary expenses') update_container='necessary_list' chained_dropdown='plans_stats' %}
+{% generic_form title=_('Additional necessary expenses') chained_dropdown='plans_stats' %}
