--- a/project/savings/templates/savings/includes/savings_type_form.html
+++ b/project/savings/templates/savings/includes/savings_type_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_form title=_('Fund') update_container='ajax-content-categories' %}
+{% generic_form title=_('Fund') %}
