--- a/project/transactions/templates/transactions/includes/savings_change_delete_form.html
+++ b/project/transactions/templates/transactions/includes/savings_change_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete transaction') update_container='savings_change_list' %}
+{% generic_delete_form title=_('Delete transaction') %}
