--- a/project/transactions/templates/transactions/includes/transactions_form.html
+++ b/project/transactions/templates/transactions/includes/transactions_form.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% url 'accounts:load_to_account' as url_chained %}
-{% generic_form title=_('Transaction') update_container='transactions_list' chained_dropdown=url_chained %}
+{% generic_form title=_('Transaction') chained_dropdown=url_chained %}
 
 <script>
     $("#id_from_account").change(function () {
