--- a/project/users/templates/users/includes/settings_form.html
+++ b/project/users/templates/users/includes/settings_form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<form method="POST" novalidate id="js_{{ form_name }}" class="js_{{ form_name }}" autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}" action="{{ url }}">
+<form method="POST" novalidate id="js_{{ form_name }}" class="js_{{ form_name }}" autocomplete="off" tabindex="-1" action="{{ url }}">
     {% csrf_token %}
     {% include 'core/includes/form.html' %}
     <button type="button" class="btn btn-sm btn-primary" data-form="{{ form_name }}" id="settings_submit">{% translate 'Update' %}</button>
