--- a/project/accounts/templates/accounts/includes/accounts_list.html
+++ b/project/accounts/templates/accounts/includes/accounts_list.html
@@ -12,7 +12,7 @@
                 <div class="list-group-item" data-url="{{ url_update }}">
                     {% if item.closed %}<s>{{ item.title }}</s> <i>{% translate 'closed' %} {{ item.closed|safe }}</i>{% else %}{{ item.title }}{% endif %}
                     <span class="edit-icon">
-                        <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit js-create"><i class="bi bi-pencil-fill"></i></button>
+                        <button type="button" data-url="{{ url_update }}" class="btn btn-super-sm edit"><i class="bi bi-pencil-fill"></i></button>
                     </span>
                 </div>
                 {% endfor %}
