--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -15,7 +15,7 @@
         <tr data-url="{{ url_update }}" class="dblclick">
             <td>{{ item.quantity|floatformat:1 }}</td>
             <td>{{ item.max_bottles|floatformat:0 }}</td>
-            <td class="w3"><button type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">{% translate 'Edit' %}</button></td>
+            <td class="w3"><button type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info">{% translate 'Edit' %}</button></td>
         </tr>
         {% empty %}
         <tr><td colspan="3">{% translate 'No goal set' %}</td></tr>
