--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -26,7 +26,7 @@
         <div class="row my-2">
             <div class="col" id="search_form_data">{{ search }}</div>
             <div class="col-auto text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create w5" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>{% translate 'Incomes' context 'incomes button' %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success w5" data-url="{{ url_incomes }}"><i class="bi bi-plus"></i>{% translate 'Incomes' context 'incomes button' %}</button>
             </div>
         </div>
         <div class="row">
@@ -37,7 +37,7 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col-lg-12 text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>{% translate 'Incomes type' context 'income type button' %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_incomes_type_new }}"><i class="bi bi-plus"></i>{% translate 'Incomes type' context 'income type button' %}</button>
             </div>
         </div>
 
